environments/informationtechnology-205813/prometheus/alertmanager-primary/alertmanager-service.yml
---
  kind: Service
  apiVersion: v1
  metadata:
    name: alertmanager
    namespace: it
  spec:
    selector:
      app: alertmanager
    ports:
      - protocol: TCP
        port: 9093
        targetPort: 9093
        name: alertmanager
